# geoselector

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  __init__.py  api.py  architecture.puml  exceptions.md  fine.txt  implementation.md  logging_config.py  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  temp.py
.old/core/: api_client.py  entities.py  geometry_cache.py  selector.py
api/: __init__.py  gouvfr.py  ign.py
config/: apis.json  config.yaml  explication_json.md
core/: __init__.py  api_client.py  config.py  config_loader.py  entities.py  exceptions.py  geo_entity.py  geo_service.py  handler_registry.py  operation_selector.py  registry.py  request_builder.py  request_template.py  selector.py  service.py  strategy.py  strategy_registry.py
docs/: IGN_strategy_plan.md
factory/: __init__.py  selector_factory.py
feature_selectors/: __init__.py  entity_feature_selector.py
geoselector/: __init__.py  logging_config.py
geoselector/config/: README.md  apis.json  explication_json.md
geoselector/core/: __init__.py  api_client.py  cache.py  entities.py  exceptions.py  handler_registry.py  operation_selector.py  request_builder.py  request_template.py  selector.py  service.py
selectors/: __init__.py  entity_selector.py
tests/: conftest.py  test_all.py  test_api_error.py  test_entities_validation.py  test_entity_selector.py  test_exceptions.py  test_geo_service.py  test_gouvfr_endpoints_availability.py  test_registry.py  test_strategies.py  test_validation.py
utils/: __init__.py  geometry_utils.py
