[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geoselector"
version = "0.1.0"
description = "Geographic selector library"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]

[tool.setuptools.package-data]
"geoselector.config" = ["*.json"]

[tool.black]
line-length = 88
skip-string-normalization = false
skip-magic-trailing-comma = false
target-version = ['py311']
